@@ -7,6 +7,9 @@ XXX
 	  - PMEMOBJ_IGNORE_DIRTY_SHUTDOWN and PMEMOBJ_IGNORE_BAD_BLOCKS are required to acknowledge the understanding of what production-critical functions are missing for the build without NDCTL
 	- does not allow opening pmem pool without unsafe shoutdown counter if not explicitly disabled
 	- remove support for build time define NO_LIBPTHREAD
+	- pmemobj_open() stack usage reduction below 12kB threshold.
+	- remove non-Linux support from all compilation paths (OS_KERNEL_NAME)
+
 
 Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>
 
@@ -17,7 +20,6 @@ Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>
 	- Reduces libpmemobj's stack usage below the 11kB threshold.
 	- Fixing minor Coverity issues
 	- Add a new toolset for stack usage analysis (https://github.com/pmem/pmdk/tree/master/utils/call_stacks_analysis)
-	
 
 Tue Aug 8 2023 Oksana Sałyk <oksana.salyk@intel.com>
 
